playing with the positioning
trying to get everything to line up

--- a/personalWebsite/htmlhome.html
+++ b/personalWebsite/htmlhome.html
@@ -28,7 +28,7 @@
 
 
 		<main>
-			<section>
+			<section style=" position: absolute;top: 45%;left: 25%;transform: translate(-50%, -50%);">
 				<h2><b>Education</b></h2>
 
 					<p>The Pennsylvania State University, &nbsp; Graduation May 2022</p>
@@ -39,7 +39,7 @@
 			</section>
 
 
-			<section>
+			<section style=" position: absolute;top: 49%;left: 75%;transform: translate(-50%, -50%);">
 				<h2><b>Related Course</b></h2>
 					<p>Intro Programming Technology CMPSC 121 | PSU Behrend Fall 2018 </p>
 
@@ -53,10 +53,10 @@
 			</section>
 
 
-			<section>
+			<section style=" position: absolute;top: 80%;left: 75%;transform: translate(-50%, -50%);">
 				<h2><b>Skills</b></h2>
 
-					<p>Software: C++, Microsoft Office Suite</p>
+					<p>Software: C++, Microsoft Office Suite, HTML, CSS</p>
 
 					<p>Other Significant Courses: Calculus/Analytic Geometry, Rhetoric/English Composition, Physics</p>
 			</section>
