--- a/personalWebsite/htmlhome.html
+++ b/personalWebsite/htmlhome.html
@@ -19,8 +19,13 @@
 
 		<header role ="banner">
 
-			<div>
+			<div id="Nametag">
 				<h1> Kieran Dalton Laverty </h1>
+			</div>
+			<div id="Pagetabs">
+				<h2>Resume</h2>
+				<h2>About</h2>
+				<h2>Projecs</h2>
 			</div>
 
 		</header>
