--- a/personalWebsite/htmlhome.html
+++ b/personalWebsite/htmlhome.html
@@ -33,7 +33,7 @@
 
 
 		<main>
-			<section style=" position: absolute;top: 45%;left: 25%;transform: translate(-50%, -50%);">
+			<section>
 				<h2><b>Education</b></h2>
 
 					<p>The Pennsylvania State University, &nbsp; Graduation May 2022</p>
@@ -44,7 +44,7 @@
 			</section>
 
 
-			<section style=" position: absolute;top: 49%;left: 75%;transform: translate(-50%, -50%);">
+			<section>
 				<h2><b>Related Course</b></h2>
 					<p>Intro Programming Technology CMPSC 121 | PSU Behrend Fall 2018 </p>
 
@@ -58,7 +58,7 @@
 			</section>
 
 
-			<section style=" position: absolute;top: 80%;left: 75%;transform: translate(-50%, -50%);">
+			<section>
 				<h2><b>Skills</b></h2>
 
 					<p>Software: C++, Microsoft Office Suite, HTML, CSS</p>
