adjusted the formating
I placed the sections in the place I would want each of them to go in.

--- a/personalWebsite/htmlhome.html
+++ b/personalWebsite/htmlhome.html
@@ -23,9 +23,7 @@
 				<h1> Kieran Dalton Laverty </h1>
 			</div>
 			<div id="Pagetabs">
-				<h2>Resume</h2>
-				<h2>About</h2>
-				<h2>Projecs</h2>
+				<h2>Resume | About | Projects</h2>
 			</div>
 
 		</header>
@@ -48,13 +46,11 @@
 				<h2><b>Related Course</b></h2>
 					<p>Intro Programming Technology CMPSC 121 | PSU Behrend Fall 2018 </p>
 
-					<li>
 						<ul>•	Build knowledge of  fundamental concepts of procedural programming</ul>
 
 						<ul>•	Utilize C++ to solve a wide variety of computational problems</ul>
 
 						<ul>•	Apply structured problem solving methodology consisting of systematic steps to produce an error-free executable program easily maintained through future refinements and layperson documentation</ul>
-					</li>
 			</section>
 
 
@@ -72,7 +68,7 @@
 					<p>Intro Programming Technology CMPSC 121 | PSU Behrend Fall 2018 </p>
 
 					<h3><strong>Minsi Trails Council (Boy Scouts of America) | Jonas, PA &nbsp;Summers, June 2014- August 2018</strong></h3>
-					<li>
+
 						<ul>•	Area 7 staff - Taught Eagle scout merit badges to scouts 12-18 to help them gain the require merit badges to become Eagle scouts over the course of 6 weeks in classes up to approximately 35</ul>
 
 						<ul>•	COPE facilitator - Guided various groups of scouts to enable teamwork and leadership through difficult challenges</ul>
@@ -80,7 +76,7 @@
 						<ul>•	Trading post staff - Managed sales in the camp store while overseeing inventory, customer service, and cleanliness of the store</ul>
 
 						<ul>•	Archery director - Promoted to Archery Director and enforced safety and managed the programs on the archery range</ul>
-					</li>
+
 			</section>
 
 
@@ -90,11 +86,11 @@
 					<p>Intro Programming Technology CMPSC 121 | PSU Behrend Fall 2018 </p>
 
 					<h3><strong>Minsi Trails Council (Boy Scouts of America) | Jonas, PA                         Summers, June 2014- August 2018</strong></h3>
-					<li>
+
 						<ul>•	Venturing Crew Volunteer, Trexler Scout Reservation | Jonas, PA Winters, October 2014-May 2018</ul>
 
 						<ul>•	Volunteer, Moose Lodge 1336 | East Stroudsburg, PA  2014-2018</ul>
-					</li>
+
 			</section>
 		</main>
 
