editing colors to be more visible pleasent
I added a color scheme and commented it to the bottom of the css.

--- a/personalWebsite/htmlhome.html
+++ b/personalWebsite/htmlhome.html
@@ -23,7 +23,8 @@
 				<h1> Kieran Dalton Laverty </h1>
 			</div>
 			<div id="Pagetabs">
-				<h2>Resume | About | Projects</h2>
+				<h2 id="currentpage">Resume</h2>
+				<h2> | About | Projects</h2>
 			</div>
 
 		</header>
