--- a/personalWebsite/htmlhome.html
+++ b/personalWebsite/htmlhome.html
@@ -17,14 +17,15 @@
 	<body>
 
 
-		<header role ="banner">
+		<header>
 
 			<div id="Nametag">
 				<h1> Kieran Dalton Laverty </h1>
 			</div>
+			<div>
+			</div>
 			<div id="Pagetabs">
-				<h2 id="currentpage">Resume</h2>
-				<h2> | About | Projects</h2>
+				<h2><a id="currentpage">Resume</a> |<a href = "About.html" title="About page">About </a>| <a href = "projects.html" title="projects page">Projects </a></h2>
 			</div>
 
 		</header>
@@ -35,7 +36,7 @@
 			<section>
 				<h2><b>Education</b></h2>
 
-					<p>The Pennsylvania State University, &nbsp; Graduation May 2022</p>
+					<p>The Pennsylvania State University,&nbsp; Graduation May 2022</p>
 
 					<p>Bachelor of Science in Computer Science</p>
 
