--- a/personalWebsite/projects.html
+++ b/personalWebsite/projects.html
@@ -4,14 +4,31 @@
 		<meta charset = "UTF-8">
 
 		<meta name = "Kieran Dalton Laverty Resume" content = "The home page of the resume Website"/>
-	
+
 		<title>Kieran Dalton Laverty || Resume Website </title>
 
 		<link rel ="stylesheet" href="css_style.css">
 	</head>
 
 	<body>
-		<h1>COMING SOON</h1>
+		<header>
+
+			<div id="Nametag">
+				<h1> Kieran Dalton Laverty </h1>
+			</div>
+			<div>
+			</div>
+			<div id="Pagetabs">
+				<h2><a href = "htmlhome.html" title="projects page">Resume</a> |<a href = "About.html" title="About page">About </a>| <a id="currentpage">Projects </a></h2>
+			</div>
+
+		</header>
+
+		<main>
+			<section>
+			     <h1>COMING SOON</h1>
+      </section>
+		</main>
 	</body>
-	
+
 </html>
