Edited the format
I edited the formate to make the page look nicer and made the code more organized

--- a/personalWebsite/About.html
+++ b/personalWebsite/About.html
@@ -11,20 +11,13 @@
 	</head>
 
 	<body>
-		<header>
+		<img src="website banner 5.png" id="Nametag">
+		<div id="Pagetabs">
+			<h2><a href = "htmlhome.html" title="projects page">Resume</a> |<a id="currentpage">About </a>| <a href = "projects.html" title="projects page">Projects </a></h2>
+		</div>
 
-			<div id="Nametag">
-				<h1> Kieran Dalton Laverty </h1>
-			</div>
-			<div>
-			</div>
-			<div id="Pagetabs">
-				<h2><a href = "htmlhome.html" title="projects page">Resume</a> |<a id="currentpage">About </a>| <a href = "projects.html" title="projects page">Projects </a></h2>
-			</div>
-
-		</header>
     <main>
-      <section>
+      <section id="Aboutmain">
 			     <h1>COMING SOON</h1>
       </section>
 		</main>
