--- a/personalWebsite/htmlhome.html
+++ b/personalWebsite/htmlhome.html
@@ -15,94 +15,55 @@
 
 
 	<body>
-
-
-		<header>
-
-			<div id="Nametag">
-				<h1> Kieran Dalton Laverty </h1>
-			</div>
-			<div>
-			</div>
-			<div id="Pagetabs">
-				<h2><a id="currentpage">Resume</a> |<a href = "About.html" title="About page">About </a>| <a href = "projects.html" title="projects page">Projects </a></h2>
-			</div>
-
-		</header>
-
-
+		<img src="website banner 5.png" id="Nametag">
+		<div id="Pagetabs">
+			<h2><a id="currentpage">Resume</a> |<a href = "About.html" title="About page">About </a>| <a href = "projects.html" title="projects page">Projects </a></h2>
+		</div>
 
 		<main>
 			<section>
 				<h2><b>Education</b></h2>
-
-					<p>The Pennsylvania State University,&nbsp; Graduation May 2022</p>
-
-					<p>Bachelor of Science in Computer Science</p>
-
-					<p>Bachelor of Management Information Science</p>
+				<p>The Pennsylvania State University,&nbsp; Graduation May 2022</p>
+				<p>Bachelor of Science in Computer Science</p>
+				<p>Bachelor of Management Information Science</p>
 			</section>
-
 
 			<section>
 				<h2><b>Related Course</b></h2>
 					<p>Intro Programming Technology CMPSC 121 | PSU Behrend Fall 2018 </p>
-
 						<ul>•	Build knowledge of  fundamental concepts of procedural programming</ul>
-
 						<ul>•	Utilize C++ to solve a wide variety of computational problems</ul>
-
 						<ul>•	Apply structured problem solving methodology consisting of systematic steps to produce an error-free executable program easily maintained through future refinements and layperson documentation</ul>
 			</section>
 
-
 			<section>
 				<h2><b>Skills</b></h2>
-
 					<p>Software: C++, Microsoft Office Suite, HTML, CSS</p>
-
 					<p>Other Significant Courses: Calculus/Analytic Geometry, Rhetoric/English Composition, Physics</p>
 			</section>
-
 
 			<section>
 				<h2><b>Work Experience</b></h2>
 					<p>Intro Programming Technology CMPSC 121 | PSU Behrend Fall 2018 </p>
-
 					<h3><strong>Minsi Trails Council (Boy Scouts of America) | Jonas, PA &nbsp;Summers, June 2014- August 2018</strong></h3>
-
 						<ul>•	Area 7 staff - Taught Eagle scout merit badges to scouts 12-18 to help them gain the require merit badges to become Eagle scouts over the course of 6 weeks in classes up to approximately 35</ul>
-
 						<ul>•	COPE facilitator - Guided various groups of scouts to enable teamwork and leadership through difficult challenges</ul>
-
 						<ul>•	Trading post staff - Managed sales in the camp store while overseeing inventory, customer service, and cleanliness of the store</ul>
-
 						<ul>•	Archery director - Promoted to Archery Director and enforced safety and managed the programs on the archery range</ul>
-
 			</section>
-
-
 
 			<section>
 				<h2><b>Volunteer & Community Service</b></h2>
 					<p>Intro Programming Technology CMPSC 121 | PSU Behrend Fall 2018 </p>
-
 					<h3><strong>Minsi Trails Council (Boy Scouts of America) | Jonas, PA                         Summers, June 2014- August 2018</strong></h3>
-
 						<ul>•	Venturing Crew Volunteer, Trexler Scout Reservation | Jonas, PA Winters, October 2014-May 2018</ul>
-
 						<ul>•	Volunteer, Moose Lodge 1336 | East Stroudsburg, PA  2014-2018</ul>
-
 			</section>
 		</main>
-
-
 
 		<footer>
 			<p>Check Out My <a href = "https://github.com/kieranlaverty/kieranlaverty.githib.io" title="Kieran GitHub" target="blank">GitHub</a></p>
 		</footer>
-
-
 	</body>
 
 </html>
