--- a/personalWebsite/projects.html
+++ b/personalWebsite/projects.html
@@ -11,22 +11,15 @@
 	</head>
 
 	<body>
-		<header>
-
-			<div id="Nametag">
-				<h1> Kieran Dalton Laverty </h1>
-			</div>
-			<div>
-			</div>
-			<div id="Pagetabs">
-				<h2><a href = "htmlhome.html" title="projects page">Resume</a> |<a href = "About.html" title="About page">About </a>| <a id="currentpage">Projects </a></h2>
-			</div>
-
-		</header>
+		<img src="website banner 5.png" id="Nametag">
+		<div id="Pagetabs">
+			<h2><a href = "htmlhome.html" title="projects page">Resume</a> |<a href = "About.html" title="About page">About </a>| <a id="currentpage">Projects </a></h2>
+		</div>
 
 		<main>
 			<section>
-			     <h1>COMING SOON</h1>
+				<h2>This website</h2>
+					<p>As I improve with my knowledge of building a website this site is an ongoing project.
       </section>
 		</main>
 	</body>
